# ChangeLog for dev-util/tinyxml
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
  tinyxml-9999.ebuild:
  Fix RDEPEND containing unneeded DEPEND values, see PMS section 8.4 for details

  03 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  tinyxml-9999.ebuild:
  Added amd64 keyword, cosmetics

  06 Mar 2007; Patrick Zimmermann (moHiJ) <patrick@zakweb.de>
  +tinyxml-9999.ebuild, +metadata.xml:
  New ebuild for bug 90041
