@@ -1,3 +1,5 @@
+DIST tinyxml_2_5_3.tar.gz 196129 RMD160 eff79d241f6155d8415521a38c484fc72980c29f SHA1 476f56caad21cd61ac7cc6fd40b503f20e3a66a9 SHA256 c0b88bc5413e41ed566dab9f7a192e0e9e6060cc13ebdeab4766168559620d2b
+EBUILD tinyxml-2.5.3.ebuild 1461 RMD160 c04b1438c157de2f28a617b874ad53bd9f594798 SHA1 ff1948d97944d3a819d6e046399a855f98aae2ec SHA256 7ffd66a892f5b7d3fa72a22a326dfb67b5534ab354879985f06f5c5963133b80
 EBUILD tinyxml-9999.ebuild 1087 RMD160 a28bdf9235e8804da578ed368b3d4926fbc48e5c SHA1 df85498d84b24c5a0ca781877f232eee5a94f8d4 SHA256 22ab6b3da30786ba27a4707ccf4e755396daca979d3048be8c6359d28e35c8cb
-MISC ChangeLog 536 RMD160 905407d46988846ac39d0199b08db845da21637f SHA1 bf3788e11e7884e84dd3b66e42afad01ca356a9e SHA256 ce9a51b02b905ffd986c4296e779a49057d91d3649c233f93183a683aa339694
+MISC ChangeLog 664 RMD160 09c3afab3ecf7f1cd9092346959a40e7de890a70 SHA1 72e2fbfdd6c43c18065aa605b504f2b599b9be1e SHA256 d1ca1ebb86f39e93156ac07836f5ba8bca1c36041b44ef8246938c8bd67c16bd
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
