@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Oct 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  +tinyxml-2.5.3.ebuild:
+  Add ebuild for latest version (untested)
+
   17 Apr 2008; Thomas Anderson (gentoofan23) <gentoofan23@gmail.com>
   tinyxml-9999.ebuild:
   Fix RDEPEND containing unneeded DEPEND values, see PMS section 8.4 for details
